# HiFly_Drone

./: .clabot  .gitignore  CONTRIBUTING.md  README.md  ThirdPartyNotices.txt  requirement.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/images/: keep.txt
.github/workflows/: rebase.yml
hifly_ros_action/action/: InitDrone.action  MoveAgent.action
hifly_ros_base/launch/: base_pipeline.launch
hifly_ros_base/src/: ACLInference.py  CameraPublisher.py
hifly_ros_pidtracker/: CMakeLists.txt
hifly_ros_pidtracker/launch/: pid_tracker.launch
hifly_ros_pidtracker/src/: action_client_final.py  action_server_final.py  bac.py  bas.py
ros_atlas/: DENode.py  DEProcessor.py  FDNode.py  FDProcessor.py  README.md  handDetectionNode.py  handProcessor.py
ros_atlas/base_nodes/: BaseInference.py  BasePostprocessor.py  CameraPublisher.py
ros_atlas/core/: BaseInference.py  BasePostprocessor.py  CameraPublisher.py
ros_atlas/custom_ros_msg/: CMakeLists.txt  package.xml
ros_atlas/custom_ros_msg/msg/: FaceDetection.msg
ros_atlas/hifly_base/: AclInference.old.py  AclInference.py  BaseInference.py  BasePostprocessor.py  CameraPublisher.py  DENode.py  FDNode.py  FDProcessor.py  Postprocessor.py  inference.py  postprocess.py  test_conda_env.py
ros_atlas/hifly_ros_action/: CMakeLists.txt  package.xml
ros_atlas/hifly_ros_base/: package.xml
ros_atlas/hifly_ros_msg/: CMakeLists.txt  package.xml
ros_atlas/hifly_ros_msg/msg/: AdaBins.msg  FaceDetection.msg  Float32Array.msg
ros_atlas/optim/: FD.py  (+5 more)
scripts/: download.sh
src/: main.py
(+109 files in other folders)
